<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_all_tasks"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/btnPending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_pending"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/btnCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_completed"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="4dp" />

        <Button
            android:id="@+id/btnToggleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="切换主题"
            android:layout_marginLeft="8dp"
            android:paddingHorizontal="12dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:divider="@color/gray_300"
        android:dividerHeight="8dp"
        android:overScrollMode="never" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_task"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp" />

</LinearLayout>